--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="login.css">
+    <title>Blog</title>
 </head>
 <body>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia a omnis deleniti dicta mollitia non cupiditate expedita odio illum sit. Sunt facere iste eos officiis fugiat molestiae dolorem numquam sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos magnam illum, architecto labore obcaecati expedita, animi iusto dolores quam incidunt exercitationem doloribus, atque aspernatur? Doloremque quae quidem a soluta maiores?
-    </p>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia a omnis deleniti dicta mollitia non cupiditate expedita odio illum sit. Sunt facere iste eos officiis fugiat molestiae dolorem numquam sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos magnam illum, architecto labore obcaecati expedita, animi iusto dolores quam incidunt exercitationem doloribus, atque aspernatur? Doloremque quae quidem a soluta maiores?
-    </p>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia a omnis deleniti dicta mollitia non cupiditate expedita odio illum sit. Sunt facere iste eos officiis fugiat molestiae dolorem numquam sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos magnam illum, architecto labore obcaecati expedita, animi iusto dolores quam incidunt exercitationem doloribus, atque aspernatur? Doloremque quae quidem a soluta maiores?
-    </p>
+    <div class="welcome">
+        <h2 class="font">Welcome to</h2>
+        <h1 class="font" id="main-font">My Blog</h1>
+    </div> 
+    <div>        
+        <form class="login-section">
+            <h2 class="login-text">Login</h2>
+            <div class="login">
+                <div>
+                    <label for="email">Email: </label>
+                    <input type="email" name="email" id="email" placeholder="E.g john123@gmail.com">
+                </div>
+                <div>
+                    <label for="password">Password: </label>
+                    <input type="password" name="password" id="password" placeholder="********">
+                </div>
+            </div>
+            <div class="buttons">
+                <button class="login-btn" id="login" type="button">
+                    Login
+                </button>
+                <button class="login-btn" onclick="openSignup()">
+                    Sign up
+                </button>
+            </div>
+            <p id="error-message">
+
+            </p>                
+        </form>
+    </div>  
+    <script src="login.js"></script>
 </body>
 </html>
