--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                     <input type="password" name="password" id="password" placeholder="********">
                 </div>
             </div>
+            <br>
+            <p id="sign-up" class="text">
+                Don't have any My Blog account?
+                <a href="signup.html">Sign up</a>
+            </p>
+            <br>
             <div class="buttons">
                 <button class="login-btn" id="login" type="button">
                     Login
